kubernetes/KC/deployments/media/tautulli/ingress.sops.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
    name: tautulli
    namespace: media
    annotations:
        kubernetes.io/ingress.class: traefik-external
spec:
    entryPoints:
        - websecure
    routes:
        - match: ENC[AES256_GCM,data:pPJusmqQxQRfjN6hwDjVHijm5/2LlW3ues+P5g==,iv:UA85wMuRMVouianb5j3T6Z2X09oMFjg5JiEe+SDGfVY=,tag:yE+6KbhRK2eTk1Sf+WuUMQ==,type:str]
          kind: Rule
          services:
            - name: ENC[AES256_GCM,data:jnZK5o71Bn8=,iv:DGLP/y30vsM7gRgkaDyUQLudpl2vbAGFbdVvRGi5Bc0=,tag:xceWoKPo9Ft0ulZEbe2Kyw==,type:str]
              port: ENC[AES256_GCM,data:WT4/8g==,iv:DLQjMILplwykv2z8LWPgiQLsjSgSmUjoYlyuxLK9ZrQ=,tag:cfCe9IVeUT+99hJeQH2a0g==,type:int]
        - match: ENC[AES256_GCM,data:BSvLoAkHkW0ysrgHBOyqzdlt7VE+VywHIQ==,iv:JNYA3/HdMp8/x0ggHeRhmxhPMqe8xwpc7pv8CEa1AXE=,tag:FXCDdsxWLqrO01AsLD3H2A==,type:str]
          kind: Rule
          services:
            - name: ENC[AES256_GCM,data:GgtCKfhkm/I=,iv:gXIuHWMZGkUmAHweLw/G3JdJmrFFSEAu//0FhAHubVs=,tag:EhOszUJUuLGh5pcmfN9p6w==,type:str]
              port: ENC[AES256_GCM,data:xu4+FA==,iv:HSOIkSz2QZX0ipWU6jf+lH/il/4pNp6v/bp5sO4FxnQ=,tag:mT4aTBtl9ifv755vHyfUfw==,type:int]
    tls:
        secretName: ENC[AES256_GCM,data:YE4WkhwExbChmpc=,iv:JM+4IujXaLF1S+p/fPQoMSVTz7vEy5NOv9I0n2dDrLQ=,tag:UFtfbpaSZQKiS12j4ykzmA==,type:str]
sops:
    kms: []
    gcp_kms: []
    azure_kv: []
    hc_vault: []
    age:
        - recipient: age1k8rczdg4c0u0a2z57zy334al5n0s3vk6mrqm6njnt3j8hr39sq4qxcrlcs
          enc: |
            -----BEGIN AGE ENCRYPTED FILE-----
            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBiMjAwbmFjZGdEQXRDeUJh
[...]
            /QWrk4YRBn6pQn2sshMlGmM4mtDgcZsrymGl9opDWCC/8WQw+NiEXw==
            -----END AGE ENCRYPTED FILE-----
    lastmodified: "2024-05-29T21:22:24Z"
    mac: ENC[AES256_GCM,data:FebL4E6CAFN3hLABMio0IobQu6+7+Ams5lgJ5O+cPNBxopEfLnuoh4Is6d+lkmzFxDTQOahFOeQdvot/kYj2P+GyBKTbwIF+Brp6IBeRHjMMiJCZrUNBUp2KPF3mDOk621O9iUvq6q0UWadKITMngjnwaDlcSqQKs/e8hqB2Plk=,iv:GvAkj3ZaDF3wJwVp9Z3JasC5XingOXbatOaeolX0Zdk=,tag:fyRCaaVdKez3AlGO176uhQ==,type:str]
    pgp: []
    encrypted_regex: ^(data|stringData|data|match|secretName|services|ports|externalName|loadBalancerIP|bootstrap|k8s.v1.cni.cncf.io/networks)$
    version: 3.8.1
